Fix sort options overflow on small screens (#192)

--- a/static/style.css
+++ b/static/style.css
@@ -829,10 +829,6 @@ button.submit:hover > svg {
         width: 100%;
     }
 
-    #sort_options {
-        min-width: fit-content;
-    }
-
     .search_widget_divider_box > select:last-child {
         border-right: 0;
     }
